# projects-dashboard-

./: .coverage  .dockerignore  .env  .env.example  .gitignore  ANTHROPIC_USAGE_TRACKING.md  BackupRenderLogs-README.md  BackupRenderLogs.env.ps1.example  BackupRenderLogs.ps1  CLAUDE.md  CLAUDE_SESSION_LOG.md  CODE_QUALITY_FIX_SUMMARY.md  COMPREHENSIVE_CREDENTIALS_AUDIT.md  COMPREHENSIVE_SYSTEM_UNDERSTANDING.md  COMPREHENSIVE_TRADING_SYSTEMS_DOCUMENTATION.md  Credentials for Trade Alerts.txt  Cursor API key.txt  DEPLOYMENT.md  DEPLOY_NOW.md  Dockerfile  EMY_OPERATIONS_MANUAL.md  EMY_QUICK_REFERENCE.md  Emy-Anthropic-Key.txt  FINAL_STATUS.md  GEMINI.md  IMPLEMENTATION_COMPLETE.md  Ibe's Mission Statement.txt  Ibe's global profile.txt  MANUAL_LOGS_ANALYSIS_2026-03-11.md  MONITORING_DEPLOYMENT_GUIDE.md  MONOREPO_MIGRATION_GUIDE.md  MULTI_AGENT_GUIDE.md  NEXT_SESSION_NOTES.md  OUTSTANDING_IMPLEMENTATION_PLAN.md  PART_2_VERIFICATION_REPORT.md  PHASE_2A_SESSION_LOG.md  PORTFOLIO_STRUCTURE.md  PRODUCTION_DEPLOYMENT.md  PUSHOVER_IMPLEMENTATION_SUMMARY.txt  README.md  (+36 more)
.claude/: SESSION_DECISIONS_HOOKS.md  SESSION_DECISIONS_INTEGRATION.md  SESSION_DECISIONS_SYSTEM.md  commands-close-session.md  commands-start-session.md  integration-test.sh  settings.local.json
.playwright-mcp/: emy-trading-health-wf-6aa9326f.json
Glassdoor-jobs/: README.md  Scripts for manual runs.txt  requirements.txt
Glassdoor-jobs-cs/: README.md  Scripts for manual runs.txt  main.py  run_workflow.py
Historical-Alerts/: .env.example  .gitignore  README.md  main.py  requirements.txt  setup.py
(+1963 files in other folders)
