[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emy"
version = "0.1.0"
description = "Emy: Autonomous AI Chief of Staff"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "click==8.1.7",
    "rich==13.7.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "oandapyV20==0.7.2",
    "anthropic>=0.28.0",
    "langgraph>=0.0.1",
    "langsmith>=0.0.63",
]
